<resources>
    <string name="app_name">MinhasNotasApp</string>
    <string name="btnDadosDisciplina">Dados da Disciplina</string>
    <string name="btnDadosAvaliacao1">Dados Avaliação 1</string>
    <string name="btnDadosAvaliacao2">Dados Avaliação 2</string>
    <string name="btnEnviarDados">EnviarDados</string>
    <string name="btnFechar">Fechar</string>


    <string name="app_dadosdisciplina_name">Dados Discplina</string>
    <string name="app_dadosresultado_name">Resultado Final</string>

    <string name="tvNome">Nome Disciplina</string>
    <string name="hint_nome">Digite o nome</string>

    <string name="tvProfessor">Professor</string>
    <string name="hint_professor">Digite o professor</string>

    <string name="btnSalvar">Salvar</string>
    <string name="btnCancelar">Cancelar</string>

    <string name="btnVoltarEditar">Voltar e Editar</string>
    <string name="btnVoltarLimpar">Voltar e Limpar</string>

    <string name="tvTitulo">Título</string>
    <string name="hint_titulo">Digite o título da Avaliação</string>

    <string name="hint_nota">Digite a nota</string>
    <string name="tvNota">Nota</string>

    <string name="tvAvaliacao">Avaliação</string>
    <string name="tvMedia">MÉDIA</string>

    <string name="negative">Não</string>
    <string name="positive">Sim</string>
    <string name="confirm_alert_title">Confirmação</string>
    <string name="confirm_alert">Deseja salvar com dados em branco?</string>

</resources>
