<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="devmob2018.com.minhasnotasapp.DadosResultadoActivity">


    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNome" />

    <TextView
        android:id="@+id/professor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvProfessor" />


    <TextView
        android:id="@+id/tituloAvaliacao1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAvaliacao"/>
    <TextView
        android:id="@+id/notaAvaliacao1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNota"/>

    <TextView
        android:id="@+id/tituloAvaliacao2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAvaliacao"/>

    <TextView
        android:id="@+id/notaAvaliacao2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNota"/>

    <TextView
        android:id="@+id/media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tvMedia"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnVoltarEditar"
            android:onClick="cancelar"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnVoltarLimpar"
            android:onClick="salvar"/>

    </LinearLayout>


</LinearLayout>
